# hitchhiker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GNUmakefile  LICENSE  MANIFEST.in  Makefile  README.md  devrun.py  pre-commit-checks.sh  pyproject.toml  requirements.txt  setup.py  shell.nix  testnx.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: datadog-sca.yml  datadog-static-analysis.yml  docker.yml  test.yml  version.yml
docs/: README.md
docs/release/: README.md  commands.md  configuration.md  gh_actions.md
hitchhiker/: __main__.py
hitchhiker/cli/: __init__.py  cli.py  config.py
hitchhiker/cli/auth/: commands.py  github.py
hitchhiker/cli/commands/: main.py  version.py
hitchhiker/cli/gcloud/: bucket.py  commands.py
hitchhiker/cli/modules/: commands.py  generate_addons_path.py  graph.py  list.py  new.py  repo.py
hitchhiker/cli/odoo/: backup.py  click_odoo_ext.py  commands.py  copy.py  dependency_graph.py  neutralize.py  restore.py
hitchhiker/cli/release/: commands.py  config.py  main.py  tagfix.py  version.py
hitchhiker/cli/release/version/: commit.py
hitchhiker/cli/update/: commands.py
hitchhiker/commitparser/: _base.py  conventional.py
hitchhiker/config/: config.py
hitchhiker/data/templates/: dependency_graph.html.j2
hitchhiker/odoo/: dependency_graph_gen.py  module.py
hitchhiker/release/: changelog.py  enums.py  regex.py
hitchhiker/release/commitparser/: _base.py  conventional.py
hitchhiker/release/version/: commit.py  semver.py
hitchhiker/tools/: backup.py  nice_table.py
hitchhiker/version/: commit.py  semver.py
hitchhiker_module_control/cli/: __init__.py  config.py
hitchhiker_module_control/cli/commands/: main.py  version.py
hitchhiker_module_control/commitparser/: _base.py  conventional.py
hitchhiker_module_control/version/: commit.py  semver.py
tests/: git_fixtures.py
tests/cli/: cli_test.py  version_test.py
tests/cli/gcloud/: bucket_test.py
tests/cli/modules/: list_test.py  mod_fixtures.py  repo_test.py
tests/cli/release/: git_fixtures.py  tagfix_test.py  version_test.py
tests/commitparser/: conventional_test.py
tests/config/: configmanager_test.py
tests/release/commitparser/: conventional_test.py
tests/release/version/: semver_test.py
tests/tools/: backup_test.py
tests/version/: semver_test.py
