[build-system]
requires = ["setuptools>=40.9.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["tests/*.py", "tests/**/*.py"]

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114, C0301"

[tool.semantic_release]
version_variables = ["setup.py:_hitchhiker_version"]
major_on_zero = false

[tool.semantic_release.remote]
token = { env = "GH_TOKEN" }

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
